change for photo

--- a/index.html
+++ b/index.html
@@ -60,33 +60,35 @@
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><img src="./photo/icon-1.jpg" alt="Парень с короткой стрижкой в очках"></li>
+                <li><img src="./photo/icon-1.jpg" alt="Парень с короткой стрижкой в очках" width="270px" height="260px"></li>
                 <li><h3>Ігор Дем'яненко</h3></li>
                 <li><p>Product Designer</p></li>
             </ul>
             <ul>
-                <li><img src="./photo/icon-2.jpg" alt="Девушка блондинка в очках"></li>
+                <li><img src="./photo/icon-2.jpg" alt="Девушка блондинка в очках" width="270px" height="260px"></li>
                 <li><h3>Ольга Рєпіна</h3></li>
                 <li><p>Frontend Developer</p></li>
             </ul>
             <ul>
-                <li><img src="./photo/icon-3.jpg" alt="Парень в белой рубашке и с улыбкой"></li>
+                <li><img src="./photo/icon-3.jpg" alt="Парень в белой рубашке и с улыбкой" width="270px" height="260px"></li>
                 <li><h3>Микола Тарасов</h3></li>
                 <li><p>Marketing</p></li>
             </ul>
             <ul>
-                <li><img src="./photo/icon-4.jpg" alt="Парень в очках чёрной футболке"></li>
+                <li><img src="./photo/icon-4.jpg" alt="Парень в очках чёрной футболке" width="270px" height="260px"></li>
                 <li><h3>Михайло Єрмаков</h3></li>
                 <li><p>UI Designer</p></li>
             </ul>
         </section>
         <footer>
             <a href="">WebStudio</a>
+            <address>
             <p>м. Київ, пр-т Лесі Українки, 26</p>
             <ul>
                 <li><a href="">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
+        </address>
         </footer>
     </main>
 </body>
