--- a/index.html
+++ b/index.html
@@ -1,92 +1,134 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <title>Shop</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="">WebStudio</a>
-            <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href=""></a>Портфоліо</li>
-                <li><a href=""></a>Контакти</li>
+    <header class="header">
+        <nav class="header-navigation">
+            <a  href="" class="header-link link"><span class="header-link-first">Web</span><span class="header-link-second">Studio</span></a>
+            <ul class="header-list">
+                <li class="header-item list">
+                    <a href="" class="header-item-link link">Студия</a>
+                </li>
+                <li class="header-item list">
+                    <a href="" class="header-item-link link">Портфолио</a>
+                </li>
+                <li class="header-item list">
+                    <a href="" class="header-item-link link">Контакты</a>
+                </li>
             </ul>
-            <a href="">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a  href=""class="header-mail link" >info@devstudio.com</a>
+            <a  href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a>
     </nav>
     </header>
     <main>
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button class="button">Замовити послугу</button>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button class="hero-btn" type="button">Заказать услугу</button>
         </section>
-        <section>
-            <ul>
-                <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+        <section class="about">
+            <ul class="about-list list">
+                <li class="about-item">
+                    <h3 class="about-title">Внимание к деталям</h3>
+                    <p class="about-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
             </ul>
-            <ul>
-                <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <ul class="about-list list">
+                <li class="about-item">
+                    <h3 class="about-title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="about-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
             </ul>
-            <ul>
-                <li>
-                    <h3>ПЛАНУВАННЯ</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлю</p>
+            <ul class="about-list list">
+                <li class="about-item">
+                    <h3 class="about-title">ПЛАНУВАННЯ</h3>
+                    <p class="about-text">Так само консультація з широким активом значною мірою зумовлю</p>
                 </li>
             </ul>
-            <ul>
-                <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <ul class="about-list list">
+                <li class="about-item">
+                    <h3 class="about-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="about-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Чим ми займаємося</h2>
-            <ul>
-                <li><img src="./photo/img (1).png" alt=""></li>
-                <li><img src="./photo/img (2).png" alt=""></li>
-                <li><img src="./photo/img.png" alt=""></li>
             </ul>
         </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li><img src="./photo/icon-1.jpg" alt="Парень с короткой стрижкой в очках" width="270px" height="260px"></li>
-                <li><h3>Ігор Дем'яненко</h3></li>
-                <li><p>Product Designer</p></li>
+        <section class="process">
+            <h2 class="process-title">Чим ми займаємося</h2>
+            <ul class="process-list list">
+                <li class="process-item">
+                    <img src="./photo/img (1).png" alt="" width="370px" height="294px">
+                </li>
+                <li class="process-item">
+                    <img src="./photo/img (2).png" alt="" width="370px" height="294px">
+                </li>
+                <li class="process-item">
+                    <img src="./photo/img.png" alt="" width="370px" height="294px">
+                </li>
             </ul>
-            <ul>
-                <li><img src="./photo/icon-2.jpg" alt="Девушка блондинка в очках" width="270px" height="260px"></li>
-                <li><h3>Ольга Рєпіна</h3></li>
-                <li><p>Frontend Developer</p></li>
+        </section>
+        <section class="team" >
+            <h2 class="team-title">Наша команда</h2>
+            <ul class="team-list list">
+                <li class="team-item">
+                    <img src="./photo/icon-1.jpg" alt="Парень с короткой стрижкой в очках" width="270px" height="260px">
+                </li>
+                <li class="team-item">
+                    <h3 class="team-title-second">Ігор Дем'яненко</h3>
+                </li>
+                <li class="team-item">
+                    <p class="team-text">Product Designer</p>
+                </li>
             </ul>
-            <ul>
-                <li><img src="./photo/icon-3.jpg" alt="Парень в белой рубашке и с улыбкой" width="270px" height="260px"></li>
-                <li><h3>Микола Тарасов</h3></li>
-                <li><p>Marketing</p></li>
+            <ul class="team-list list">
+                <li class="team-item">
+                    <img src="./photo/icon-2.jpg" alt="Девушка блондинка в очках" width="270px" height="260px">
+                </li>
+                <li class="team-item">
+                    <h3 class="team-title-second">Ольга Рєпіна</h3>
+                </li>
+                <li class="team-item">
+                    <p class="team-text">Frontend Developer</p>
+                </li>
             </ul>
-            <ul>
-                <li><img src="./photo/icon-4.jpg" alt="Парень в очках чёрной футболке" width="270px" height="260px"></li>
-                <li><h3>Михайло Єрмаков</h3></li>
-                <li><p>UI Designer</p></li>
+            <ul class="team-list list">
+                <li class="team-item">
+                    <img src="./photo/icon-3.jpg" alt="Парень в белой рубашке и с улыбкой" width="270px" height="260px">
+                </li>
+                <li class="team-item">
+                    <h3 class="team-title-second">Микола Тарасов</h3>
+                </li>
+                <li class="team-item">
+                    <p class="team-text">Marketing</p>
+                </li>
+            </ul>
+            <ul class="team-list list">
+                <li class="team-item">
+                    <img src="./photo/icon-4.jpg" alt="Парень в очках чёрной футболке" width="270px" height="260px">
+                </li>
+                <li class="team-item">
+                    <h3 class="team-title-second">Михайло Єрмаков</h3>
+                </li>
+                <li class="team-item">
+                    <p class="team-text">UI Designer</p>
+                </li>
             </ul>
         </section>
         <footer>
-            <a href="">WebStudio</a>
+            <a href="" class="footer-link link">
+                <span class="footer-link-first">Web</span><span class="footer-link-second">Studio</span>
+            </a>
             <address>
-            <p>м. Київ, пр-т Лесі Українки, 26</p>
-            <ul>
-                <li><a href="">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <a href="" class="footer-address link">м. Київ, пр-т Лесі Українки, 26</a>
+            <ul class="footer-list list">
+                <li class="footer-item list"><a href="" class="footer-mail link">info@devstudio.com</a></li>
+                <li class="footer-item "><a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a></li>
             </ul>
         </address>
         </footer>
