--- a/index.html
+++ b/index.html
@@ -37,30 +37,30 @@
             <ul class="about-list list">
                 <li class="about-item">
                     <h3 class="about-title">Внимание к деталям</h3>
-                    <p class="about-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <p class="about-text">Идейные рассуждения, и даже начало повседневной работы по формированию позиции.</p>
                 </li>
             </ul>
             <ul class="about-list list">
                 <li class="about-item">
-                    <h3 class="about-title">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p class="about-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <h3 class="about-title">Пунктуальность</h3>
+                    <p class="about-text">Задачи организации, особенно рамки и место обучения кадров тянет у себя.</p>
                 </li>
             </ul>
             <ul class="about-list list">
                 <li class="about-item">
-                    <h3 class="about-title">ПЛАНУВАННЯ</h3>
-                    <p class="about-text">Так само консультація з широким активом значною мірою зумовлю</p>
+                    <h3 class="about-title">Планирование</h3>
+                    <p class="about-text">Точно так же консультация с широким активом в значительной степени обусловлен.</p>
                 </li>
             </ul>
             <ul class="about-list list">
                 <li class="about-item">
-                    <h3 class="about-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p class="about-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <h3 class="about-title">Современные технологии</h3>
+                    <p class="about-text">Значимость этих проблем настолько очевидна, что реализация плановых задач.</p>
                 </li>
             </ul>
         </section>
         <section class="process">
-            <h2 class="process-title">Чим ми займаємося</h2>
+            <h2 class="process-title">Чем мы занимаемся</h2>
             <ul class="process-list list">
                 <li class="process-item">
                     <img src="./photo/img (1).png" alt="" width="370px" height="294px">
@@ -80,7 +80,7 @@
                     <img src="./photo/icon-1.jpg" alt="Парень с короткой стрижкой в очках" width="270px" height="260px">
                 </li>
                 <li class="team-item">
-                    <h3 class="team-title-second">Ігор Дем'яненко</h3>
+                    <h3 class="team-title-second">Игорь Демьяненко</h3>
                 </li>
                 <li class="team-item">
                     <p class="team-text">Product Designer</p>
@@ -91,7 +91,7 @@
                     <img src="./photo/icon-2.jpg" alt="Девушка блондинка в очках" width="270px" height="260px">
                 </li>
                 <li class="team-item">
-                    <h3 class="team-title-second">Ольга Рєпіна</h3>
+                    <h3 class="team-title-second">Ольга Репина</h3>
                 </li>
                 <li class="team-item">
                     <p class="team-text">Frontend Developer</p>
@@ -102,7 +102,7 @@
                     <img src="./photo/icon-3.jpg" alt="Парень в белой рубашке и с улыбкой" width="270px" height="260px">
                 </li>
                 <li class="team-item">
-                    <h3 class="team-title-second">Микола Тарасов</h3>
+                    <h3 class="team-title-second">Николай Тарасов</h3>
                 </li>
                 <li class="team-item">
                     <p class="team-text">Marketing</p>
@@ -113,7 +113,7 @@
                     <img src="./photo/icon-4.jpg" alt="Парень в очках чёрной футболке" width="270px" height="260px">
                 </li>
                 <li class="team-item">
-                    <h3 class="team-title-second">Михайло Єрмаков</h3>
+                    <h3 class="team-title-second">Михаил Ермаков</h3>
                 </li>
                 <li class="team-item">
                     <p class="team-text">UI Designer</p>
@@ -125,7 +125,7 @@
                 <span class="footer-link-first">Web</span><span class="footer-link-second">Studio</span>
             </a>
             <address>
-            <a href="" class="footer-address link">м. Київ, пр-т Лесі Українки, 26</a>
+            <a href="" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
             <ul class="footer-list list">
                 <li class="footer-item list"><a href="" class="footer-mail link">info@devstudio.com</a></li>
                 <li class="footer-item "><a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a></li>
