--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Shop</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">    
+<link rel="stylesheet" href="./css/style.css">
+<title>Shop</title>
 </head>
 <body>
     <header class="header">
+        <div class="container">
         <nav class="header-navigation">
             <a  href="" class="header-link link"><span class="header-link-first">Web</span><span class="header-link-second">Studio</span></a>
             <ul class="header-list">
@@ -24,16 +27,24 @@
                     <a href="" class="header-item-link link">Контакты</a>
                 </li>
             </ul>
-            <a  href=""class="header-mail link" >info@devstudio.com</a>
+        </nav>
+            <div class="header-address">
+            <a  href="" class="header-mail link" >info@devstudio.com</a>
             <a  href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a>
-    </nav>
+        </div>
+        </div>
     </header>
     <main>
         <section class="hero">
+            <div class="container">
+            <div class="hero-container">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <button class="hero-btn" type="button">Заказать услугу</button>
+        </div>
+        </div>
         </section>
         <section class="about">
+            <div class="container">
             <ul class="about-list list">
                 <li class="about-item">
                     <h3 class="about-title">Внимание к деталям</h3>
@@ -58,8 +69,10 @@
                     <p class="about-text">Значимость этих проблем настолько очевидна, что реализация плановых задач.</p>
                 </li>
             </ul>
+        </div>
         </section>
         <section class="process">
+            <div class="container">
             <h2 class="process-title">Чем мы занимаемся</h2>
             <ul class="process-list list">
                 <li class="process-item">
@@ -72,12 +85,14 @@
                     <img src="./photo/img.png" alt="" width="370px" height="294px">
                 </li>
             </ul>
+        </div>
         </section>
         <section class="team" >
+            <div class="container">
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list list">
                 <li class="team-item">
-                    <img src="./photo/icon-1.jpg" alt="Парень с короткой стрижкой в очках" width="270px" height="260px">
+                    <img src="./photo/icon-1.jpg" alt="Парень с короткой стрижкой в очках" width="270px" height="260px" class="team-img">
                 </li>
                 <li class="team-item">
                     <h3 class="team-title-second">Игорь Демьяненко</h3>
@@ -88,7 +103,7 @@
             </ul>
             <ul class="team-list list">
                 <li class="team-item">
-                    <img src="./photo/icon-2.jpg" alt="Девушка блондинка в очках" width="270px" height="260px">
+                    <img src="./photo/icon-2.jpg" alt="Девушка блондинка в очках" width="270px" height="260px" class="team-img">
                 </li>
                 <li class="team-item">
                     <h3 class="team-title-second">Ольга Репина</h3>
@@ -99,7 +114,7 @@
             </ul>
             <ul class="team-list list">
                 <li class="team-item">
-                    <img src="./photo/icon-3.jpg" alt="Парень в белой рубашке и с улыбкой" width="270px" height="260px">
+                    <img src="./photo/icon-3.jpg" alt="Парень в белой рубашке и с улыбкой" width="270px" height="260px" class="team-img">
                 </li>
                 <li class="team-item">
                     <h3 class="team-title-second">Николай Тарасов</h3>
@@ -110,7 +125,7 @@
             </ul>
             <ul class="team-list list">
                 <li class="team-item">
-                    <img src="./photo/icon-4.jpg" alt="Парень в очках чёрной футболке" width="270px" height="260px">
+                    <img src="./photo/icon-4.jpg" alt="Парень в очках чёрной футболке" width="270px" height="260px" class="team-img">
                 </li>
                 <li class="team-item">
                     <h3 class="team-title-second">Михаил Ермаков</h3>
@@ -119,18 +134,21 @@
                     <p class="team-text">UI Designer</p>
                 </li>
             </ul>
+        </div>
         </section>
         <footer>
+            <div class="container">
             <a href="" class="footer-link link">
-                <span class="footer-link-first">Web</span><span class="footer-link-second">Studio</span>
+                <div class="footer-link-span"><span class="footer-link-first">Web</span><span class="footer-link-second">Studio</span></div>
             </a>
-            <address>
+            <address class="footer-name">
             <a href="" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
             <ul class="footer-list list">
                 <li class="footer-item list"><a href="" class="footer-mail link">info@devstudio.com</a></li>
                 <li class="footer-item "><a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a></li>
             </ul>
         </address>
+    </div>
         </footer>
     </main>
 </body>
