--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         </section>
         <footer>
             <div class="container">
-                <div class="footer-section">
+                <div class="footer-listaddress">
             <a href="" class="footer-link link">
                 <div class="footer-link-span"><span class="footer-link-first">Web</span><span class="footer-link-second">Studio</span></div>
             </a>
@@ -384,7 +384,6 @@
             </li>
         </ul>
     </div>
-</div>
     </div>
         </footer>
     </main>
