--- a/index.html
+++ b/index.html
@@ -333,50 +333,51 @@
         <footer>
             <div class="container">
                 <div class="footer-listaddress">
+                    <div class="footer-address-item">
             <a href="" class="footer-link link">
                 <div class="footer-link-span"><span class="footer-link-first">Web</span><span class="footer-link-second">Studio</span></div>
             </a>
             <address class="footer-name">
             <a href="" class="footer-address link">г. Киев, пр-т Леси Украинки, 26</a>
             <ul class="footer-list list">
-                <li class="footer-item list"><a href="" class="footer-mail link">info@devstudio.com</a></li>
+                <li class="footer-item list"><a href="" class="footer-mail link">info@devstudio.com</a></li> 
                 <li class="footer-item "><a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a></li>
             </ul>
         </address>
+    </div>
         <div class="footer-social-link">
         <h2 class="footer-title">
             Присоединяйтесь
         </h2>
-        <ul class="footer-list list">
-                        
-            <li class="footer-list-link">
-        <a href="" class="team-link">
-            <svg class="team-social-link">
+        <ul class="footer-item-second list">
+            <li class="footer-item-link">
+        <a href="" class="footer-first-link link">
+            <svg class="footer-social">
                 <use href="./photo/symbol-defs.svg#icon-instagram-2">
                 </use>
             </svg>
             </a>
         </li>
-        <li class="team-item-link">
-            <a href="" class="team-link link">
-                <svg class="team-social-link">
+        <li class="footer-item-link">
+            <a href="" class="footer-first-link link">
+                <svg class="footer-social">
                     <use href="./photo/symbol-defs.svg#icon-facebook-1" class="link-link">
                     </use>
                 </svg>
             </a>
             </li>
-            <li class="team-item-link">
-                <a href="" class="team-link">
-                    <svg class="team-social-link">
+            <li class="footer-item-link">
+                <a href="" class="footer-first-link link">
+                    <svg class="footer-social">
                         <use href="./photo/symbol-defs.svg#icon-linkedin-1" >
     
                         </use>
                     </svg>
                 </a>
             </li>
-            <li class="team-item-link">
-                    <a href="" class="team-link">
-                        <svg class="team-social-link">
+            <li class="footer-item-link">
+                    <a href="" class="footer-first-link link">
+                        <svg class="footer-social">
                             <use href="./photo/symbol-defs.svg#icon-group">
                             </use>
                         </svg>
