--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
                 </ul>
             </div>
         </section>
+    </main>
         <footer>
             <div class="container">
                 <div class="footer-listaddress">
@@ -360,7 +361,12 @@
     </div>
     </div>
         </footer>
-    </main>
-   
+
+        <div class="backdrop">
+            <div class="modal">
+            <button type="button" class="modal-close-button">X</button>
+            
+            </div>
+        </div>
 </body>
 </html>
