--- a/index.html
+++ b/index.html
@@ -366,5 +366,6 @@
             <button type="button" class="modal-close-button">X</button>
             </div>
         </div>
+        <script src="./js/modal.js"></script>
 </body>
 </html>
