--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container">
             <div class="hero-container">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button class="hero-btn" type="button">Заказать услугу</button>
+            <button class="hero-btn" type="button" data-modal-open>Заказать услугу</button>
         </div>
         </div>
         </section>
@@ -361,9 +361,9 @@
     </div>
     </div>
         </footer>
-        <div class="backdrop">
+        <div class="backdrop is-hidden"  data-modal>
             <div class="modal">
-            <button type="button" class="modal-close-button">X</button>
+            <button type="button" class="modal-close-button" data-modal-close>X</button>
             </div>
         </div>
         <script src="./js/modal.js"></script>
